do not consider any extension when comparing EQ data
Signed-off-by: Luma <zamarrenolm@aia.es>